Guess the number

--- a/2 Guess_the_number.ipynb
+++ b/2 Guess_the_number.ipynb
@@ -19,51 +19,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please, make sure you enter a number\n",
       "Please, provide a valid number (0-10)\n",
       "Please, make sure you enter a number\n",
-      "The number is too low\n",
-      "3 6\n",
-      "The number is too low\n",
-      "4 6\n",
+      "Please, provide a valid number (0-10)\n",
       "The number is too high\n",
-      "9 6\n",
+      "user: 3 , random: 1\n",
+      "The number is too high\n",
+      "user: 2 , random: 1\n",
       "Spot-on!\n",
-      "6 6\n"
+      "user: 1 , random: 1\n"
      ]
     }
    ],
    "source": [
     "import random #importing the random module to generate a number unknown to the user\n",
     "\n",
-    "random_num = random.randint(0,10)\n",
+    "random_num = random.randint(0,10) #establishing the range for the unknown number\n",
     "\n",
     "while True:\n",
     "    try:\n",
-    "        user = int(input(\"Please, try to guess the number in a range 0-10\")) #asking the user to guess the number\n",
+    "        user = int(input(\"Please, try to guess the number in the range 0-10\")) #asking the user to guess the number\n",
     "    except:\n",
-    "        print(\"Please, make sure you enter a number\")\n",
-    "        continue\n",
+    "        print(\"Please, make sure you enter a number\") #ensuring the user enters a number instead of a letter\n",
     "    if user > 10:\n",
-    "        print(\"Please, provide a valid number (0-10)\")\n",
+    "        print(\"Please, provide a valid number (0-10)\") #ensuring the user enters a number in the range 0-10\n",
     "        continue\n",
+    "    #conditionals comparing the user number with the random number\n",
     "    elif user > random_num:\n",
-    "        print(\"The number is too high\")\n",
-    "        print(user, random_num)\n",
+    "        print(\"The number is too high\") #indicating the number entered by the user is higher than the unknown number\n",
+    "        print(\"user:\",user,\", random:\", random_num)\n",
     "    elif user < random_num:\n",
-    "        print(\"The number is too low\")\n",
-    "        print(user, random_num)\n",
+    "        print(\"The number is too low\") #indicating the number entered by the user is lower than the unknown number\n",
+    "        print(\"user:\",user,\", random:\", random_num)\n",
     "    else:\n",
-    "        print(\"Spot-on!\")\n",
-    "        print(user, random_num)\n",
-    "        break"
+    "        print(\"Spot-on!\") #indicating the number entered by the user is exactly the unknown number\n",
+    "        print(\"user:\",user,\", random:\", random_num)\n",
+    "        break #the code will stop running when the user guesses the unknown number"
    ]
   }
  ],
@@ -83,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
