--- a/2 Guess_the_number.ipynb
+++ b/2 Guess_the_number.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "############################ Guess the number ############################\n",
+    "######################################################## Guess the number ########################################################\n",
     "\n",
     "'''TASK: This project uses the random module in Python. The program will first randomly generate a\n",
     "number unknown to the user. The user needs to guess what that number is. (In other words, the\n",
